<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChaT Translator </string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
<string name="translateicon">Transalte Icon</string>

<string name="mic">mic</string>
<string name="extras">extras</string>
<string name="no_connection">No internet connection ....</string>

<string name="no_voice">voice recognizer not present</string>
<string name="Warning">Warning</string>

<string name="ok">   OK   </string>

<string name="share">   Share  </string>
<string name="copy">   Copy   </string>
<string name="delete">   Delete   </string>

</resources>
