<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
        android:id="@+id/item_share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="always"
        android:title="@string/share"
        android:titleCondensed="@string/share">
    </item>
     
     <item
        android:id="@+id/item_copy"
        android:icon="@drawable/ic_action_copy"
        android:showAsAction="always"
        android:title="@string/copy"
        android:titleCondensed="@string/copy">
    </item>
     <item
        android:id="@+id/item_delete"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="ifRoom"
        android:title="@string/delete"
        android:titleCondensed="@string/delete">
    </item>

</menu>
