

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/tiledbg"
    android:orientation="vertical"
    android:id="@+id/app_layout"
    tools:context=".MainActivity" >

     <LinearLayout
         android:id="@+id/action_bar_layout" 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         style="@drawable/spinnerrow"
         android:background="@drawable/action_bg" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        style="@style/ic_launcher_style"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/logo"/>

    <Spinner
        android:id="@+id/fro_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/fro_spinner_style"
       android:animateLayoutChanges="true"
       
        android:spinnerMode="dropdown"  
        android:dropDownVerticalOffset="8.5sp"
        android:layout_gravity="left"
        android:dropDownWidth="wrap_content"
        android:popupBackground="@drawable/action_drop"
        android:gravity="left"          
        android:layout_weight="6"/>

    <ImageButton
        android:id="@+id/translate_icon"
        style="@style/tran_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:contentDescription="@string/translateicon"
        android:src="@drawable/ic_action_tran" />
   
    <Spinner
        android:id="@+id/to_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/fro_spinner_style"
       
        android:spinnerMode="dropdown"  
        android:dropDownVerticalOffset="8.5sp"
        android:layout_gravity="left"
        android:dropDownWidth="wrap_content"
        android:popupBackground="@drawable/action_drop"
        android:gravity="left"          
        android:layout_weight="6"/>
   
    
  </LinearLayout>
  
       <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/form"
        android:ellipsize="end"
        android:layout_below="@+id/action_bar_layout" 
        android:cacheColorHint="#00000000"
        android:divider="#00000000"
       android:longClickable="true"
         android:choiceMode="multipleChoice"
        android:listSelector="#00000000"          
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"   
	    
         >
    </ListView>
          
    
    <LinearLayout
        android:id="@+id/form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"        
    	android:paddingBottom="@dimen/activity_vertical_margin"
   	    android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:background="#e9f5ec"
    	>

        <ImageView
            android:id="@+id/mic"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:contentDescription="@string/mic"
            android:src="@drawable/ic_action_mic" />

        <EditText
            android:id="@+id/edittext_fro_lang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"           
            android:layout_weight="9"
            android:paddingRight="4dp"
            android:imeActionLabel="CHECK"
             android:inputType="text" />
         <ImageView
            android:id="@+id/send_now"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:contentDescription="@string/mic"
            android:src="@drawable/ic_action_send_now" />
       
    </LinearLayout>
    
    
</RelativeLayout>
